--- a/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
+++ b/CourtApp.Web/Views/Shared/Components/Sidebar/Default.cshtml
@@ -93,12 +93,12 @@
                                 </a>
                             </li> *@
 
-                            @* <li class="nav-item">
+                            <li class="nav-item">
                                 <a is-active-route asp-area="LawyerDiary" asp-controller="CaseStage" asp-action="index" class="nav-link">
                                     <i class="far fa-circle nav-icon"></i>
                                     <p>@localizer["Case Stage"]</p>
                                 </a>
-                            </li> *@
+                            </li>
                             
 
                             
@@ -239,6 +239,12 @@
                             <a is-active-route asp-area="Litigation" asp-controller="CaseManage" asp-action="index" class="nav-link">
                                 <i class="fa fa-gavel" aria-hidden="true"></i>
                                 <p>@localizer["Manage Cases"]</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a is-active-route asp-area="Litigation" asp-controller="CaseWork" asp-action="index" class="nav-link">
+                                <i class="fa fa-gavel" aria-hidden="true"></i>
+                                <p>@localizer["Pending Work"]</p>
                             </a>
                         </li>
                         <li class="nav-item">
