--- a/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/WorkMasterSub/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = localizer["Work Master Sub"];
-    ViewData["Caption"] = localizer["Work Master Sub List"];
+    ViewData["Title"] = localizer["Work Master"];
+    ViewData["Caption"] = localizer["Work Master List"];
 }
 @model WorkMasterSubViewModel
 <div class="card">
