--- a/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
@@ -26,7 +26,7 @@
                                 <td style="width:90%">
                                     @w.WorkDetail
                                 </td>
-                                <td style="width:10%"><input type="checkbox" value="@w.WorkId" /></td>
+                                <td style="width:10%"><input type="checkbox" value="@w.Id" /></td>
                             </tr>
                         }
                     </table>
