--- a/CourtApp.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CourtApp.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -112,4 +112,4 @@
     <partial name="_Scripts" />
 </body>
 </html>
-@* @await Component.InvokeAsync("Notyf") *@
+@await Component.InvokeAsync("Notyf")
