--- a/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/ProceedingSubHead/_CreateOrEdit.cshtml
@@ -6,7 +6,7 @@
                 <label class="col-md-3 col-form-label">@localizer["Head"]</label>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <select name="PHeadId" class="form-control select2bs4" id="HeadId" asp-for="HeadId" asp-items="@Model.PHeads">
+                        <select name="HeadId" class="form-control select2bs4" id="HeadId" asp-for="HeadId" asp-items="@Model.PHeads">
                             <option></option>
                         </select>
                     </div>
