--- a/CourtApp.Web/Areas/LawyerDiary/Views/WorkMaster/Index.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/WorkMaster/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = localizer["Work Master"];
-    ViewData["Caption"] = localizer["Work Master List"];
+    ViewData["Title"] = localizer["Work Type"];
+    ViewData["Caption"] = localizer["Work Type List"];
 }
 @model WorkMasterViewModel
 <div class="card">
